# wasm-oo7-tutorial

./: .gitignore  Cargo.toml  _annotations.html  package.json  xpla.json
docs/: index.html
docs/js/: 001-Create_React_App.html  002-oo7.html  003-oo7-react.html  004-oo7-parity.html  005-interact_with_contract.html  006-Events..html  index.html
docs/js/002/public/: index.html
docs/js/002/src/: index.js
docs/js/003/src/: App.js
docs/js/004/: package.json
docs/js/006/src/: App.js  Contract.js
docs/rust/: 001-Hello_World.html  002-Storage_access..html  003-Contract_ABI.html  004-Events.html  index.html
docs/rust/001/: build.sh
docs/rust/001/src/: lib.rs
docs/rust/002/: Cargo.toml
docs/rust/003/src/: lib.rs
docs/rust/004/src/: lib.rs
src/: App.js  abi.json  lib.rs
