[package]
name = "wasm-demo"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]

# 2/ Add pwasm-ethereum dependency
[dependencies]
pwasm-ethereum="0.3"

# 3/ Mark the crate as cdylib
[lib]
crate-type = ["cdylib"]
path = "./src/lib.rs"

# 4/ Enable size optimizations
[profile.release]
panic = "abort"
lto = true
opt-level = "z"
