[package]
name = "wasm-demo"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]

[dependencies]
# We're adding pwasm-std library to get a H256 type
pwasm-std = "0.6"
pwasm-ethereum="0.3"


[lib]
crate-type = ["cdylib"]
path = "./src/lib.rs"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
